# mars

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  GOVERNANCE.md  LICENSE  MARS_v0.9.json  README.md
docs/: README.md
examples/: README.md  amr_logistics_example.json  humanoid_factory_example.json  warehouse_robot_example.json
schema/: MARS_v0.9.json  README.md
sdk/: README.md
sdk/python/mars-core/: README.md  pyproject.toml
sdk/python/mars-core/examples/: amr_logistics_example.json  humanoid_factory_example.json  warehouse_robot_example.json
sdk/python/mars-core/mars/: MARS_v0.9.json  __init__.py
sdk/python/mars-core/mars/core/: __init__.py  benchmarks.py  formulas.py  schema_loader.py  validation.py
sdk/python/mars-core/tests/: test_formulas.py  test_validation.py
sdk/python/mars-ros2-bridge/: README.md
sdk/python/mars-ros2-bridge/config/: generic_mapping.yaml  mir200_mapping.yaml
sdk/python/mars-ros2-bridge/docs/: MARS_OpenRobOps_Profile.md
sdk/python/mars-ros2-bridge/mars_bridge/: __init__.py  bridge.py  config_loader.py  publisher.py
sdk/python/mars-ros2-bridge/tests/: test_bridge_mapping.py  test_config_loader.py
