[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mars-core"
version = "0.9.0"
authors = [
    {name = "MachineAssets"},
]
license = {text = "MIT"}
description = "Canonical formula implementation for MARS v0.9"
requires-python = ">=3.9"
dependencies = [
    "jsonschema>=4.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["mars*"]

[tool.setuptools.package-data]
mars = ["MARS_v0.9.json"]
